--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "async": "^2.0.1",
     "compression": "^1.0.3",
     "cors": "^2.5.2",
+    "dropbox": "^2.2.1",
     "helmet": "^1.3.0",
     "loopback": "^2.22.0",
     "loopback-boot": "^2.6.5",
     "loopback-component-explorer": "^2.4.0",
     "loopback-connector-postgresql": "^2.6.3",
     "loopback-datasource-juggler": "^2.39.0",
+    "mailgun-js": "^0.7.12",
+    "moment": "^2.15.1",
     "serve-favicon": "^2.0.1",
     "shortid32": "^0.1.1",
     "strong-error-handler": "^1.0.1",
