--- a/server/model-config.json
+++ b/server/model-config.json
@@ -52,5 +52,17 @@
   "news": {
     "dataSource": "psql",
     "public": false
+  },
+  "email": {
+    "dataSource": "psql",
+    "public": false
+  },
+  "photo": {
+    "dataSource": "psql",
+    "public": false
+  },
+  "album": {
+    "dataSource": "psql",
+    "public": false
   }
 }
